--- a/LoginApp/app/src/main/AndroidManifest.xml
+++ b/LoginApp/app/src/main/AndroidManifest.xml
@@ -41,8 +41,6 @@
             android:name=".SignIn"
             android:label="@string/title_activity_sign_in" >
         </activity>
-
-
         -->
 
         <activity
@@ -65,12 +63,10 @@
             android:name=".gameScreen"
             android:label="@string/title_activity_game_screen" >
         </activity>
-
         <activity
             android:name=".DeviceScanActivity"
             android:label="@string/title_activity_device_scan" >
         </activity>
-
         <activity
             android:name=".DeviceControlActivity"
             android:label="@string/title_activity_device_control" >
@@ -81,6 +77,11 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <activity
+            android:name=".ListViewActivity"
+            android:label="@string/title_activity_list_view" >
+        </activity>
     </application>
 
 </manifest>
