Added View Entries
Still want view single entry. started working on BLE send, but its
broken AF

--- a/LoginApp/app/src/main/AndroidManifest.xml
+++ b/LoginApp/app/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
             android:name=".ListViewActivity"
             android:label="@string/title_activity_list_view" >
         </activity>
+        <activity
+            android:name=".EntriesList"
+            android:label="@string/title_activity_entries_list" >
+        </activity>
     </application>
 
 </manifest>
